--- a/index.html
+++ b/index.html
@@ -26,12 +26,5 @@
    <h3>Actividades:</h3>
    <ol>
       <l1>
-        <a href="https://github.com/Yeshua66/culturadigital2/blob/22f6097a01e02b81be8d0303d8928a8d4f3e7d60/practira3.pptx"actividad powe point
-</body>
-</html>" alt="" width="200px">
-   <h3>Actividades:</h3>
-   <ol>
-      <l1>
-        <a href="https://github.com/Yeshua66/culturadigital2/blob/22f6097a01e02b81be8d0303d8928a8d4f3e7d60/practira3.pptx"actividad powe point
-</body>
-</html>
+        <a href="https://github.com/Yeshua66/culturadigital2/blob/22f6097a01e02b81be8d0303d8928a8d4f3e7d60/practira3.pptx"actividad power point
+
